--- a/jira-soapclient/pom.xml
+++ b/jira-soapclient/pom.xml
@@ -151,6 +151,16 @@
 			<artifactId>commons-configuration</artifactId>
 			<version>1.10</version>
 		</dependency>
+		  <dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>
+		    <version>2.5</version>
+		  </dependency>
+		  <dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>2.5</version>
+		  </dependency>
     </dependencies>
     <dependencyManagement>
     	<dependencies>
@@ -194,6 +204,16 @@
 				<artifactId>commons-configuration</artifactId>
 				<version>1.10</version>
 			</dependency>
+			  <dependency>
+			    <groupId>org.apache.logging.log4j</groupId>
+			    <artifactId>log4j-api</artifactId>
+			    <version>2.5</version>
+			  </dependency>
+			  <dependency>
+			    <groupId>org.apache.logging.log4j</groupId>
+			    <artifactId>log4j-core</artifactId>
+			    <version>2.5</version>
+			  </dependency>
     	</dependencies>
     </dependencyManagement>
 </project>
